tests/ui/typeck/typeck-default-trait-impl-cross-crate-coherence.stderr
error[E0321]: cross-crate traits with a default impl, like `DefaultedTrait`, can only be implemented for a struct/enum type, not `(A,)`
  --> $DIR/typeck-default-trait-impl-cross-crate-coherence.rs:11:1
   |
LL | impl DefaultedTrait for (A,) {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ can't implement cross-crate trait with a default impl for non-struct/enum type

error[E0321]: cross-crate traits with a default impl, like `DefaultedTrait`, can only be implemented for a struct/enum type, not `(B,)`
  --> $DIR/typeck-default-trait-impl-cross-crate-coherence.rs:15:1
   |
LL | impl !DefaultedTrait for (B,) {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ can't implement cross-crate trait with a default impl for non-struct/enum type

error[E0321]: cross-crate traits with a default impl, like `DefaultedTrait`, can only be implemented for a struct/enum type defined in the current crate
  --> $DIR/typeck-default-trait-impl-cross-crate-coherence.rs:20:1
   |
LL | impl DefaultedTrait for Box<C> {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ can't implement cross-crate trait for type in another crate

error[E0321]: cross-crate traits with a default impl, like `DefaultedTrait`, can only be implemented for a struct/enum type defined in the current crate
  --> $DIR/typeck-default-trait-impl-cross-crate-coherence.rs:22:1
   |
LL | impl DefaultedTrait for lib::Something<C> {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ can't implement cross-crate trait for type in another crate

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0321`.
